; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_update.c_UPDATE_get_column_info.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_update.c_UPDATE_get_column_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tagMSIVIEW = type { i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { %struct.TYPE_6__* }
%struct.TYPE_6__ = type { i32 (%struct.TYPE_7__*, i32, i32*, i32*, i32*, i32*)* }

@.str = private unnamed_addr constant [19 x i8] c"%p %d %p %p %p %p\0A\00", align 1
@ERROR_FUNCTION_FAILED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tagMSIVIEW*, i32, i32*, i32*, i32*, i32*)* @UPDATE_get_column_info to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UPDATE_get_column_info(%struct.tagMSIVIEW* %0, i32 %1, i32* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.tagMSIVIEW*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_8__*, align 8
  %15 = alloca %struct.TYPE_7__*, align 8
  store %struct.tagMSIVIEW* %0, %struct.tagMSIVIEW** %8, align 8
  store i32 %1, i32* %9, align 4
  store i32* %2, i32** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %16 = load %struct.tagMSIVIEW*, %struct.tagMSIVIEW** %8, align 8
  %17 = bitcast %struct.tagMSIVIEW* %16 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %17, %struct.TYPE_8__** %14, align 8
  %18 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load i32*, i32** %10, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = call i32 @TRACE(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), %struct.TYPE_8__* %18, i32 %19, i32* %20, i32* %21, i32* %22, i32* %23)
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  %27 = load %struct.TYPE_7__*, %struct.TYPE_7__** %26, align 8
  store %struct.TYPE_7__* %27, %struct.TYPE_7__** %15, align 8
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %29 = icmp ne %struct.TYPE_7__* %28, null
  br i1 %29, label %32, label %30

30:                                               ; preds = %6
  %31 = load i32, i32* @ERROR_FUNCTION_FAILED, align 4
  store i32 %31, i32* %7, align 4
  br label %45

32:                                               ; preds = %6
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 0
  %35 = load %struct.TYPE_6__*, %struct.TYPE_6__** %34, align 8
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  %37 = load i32 (%struct.TYPE_7__*, i32, i32*, i32*, i32*, i32*)*, i32 (%struct.TYPE_7__*, i32, i32*, i32*, i32*, i32*)** %36, align 8
  %38 = load %struct.TYPE_7__*, %struct.TYPE_7__** %15, align 8
  %39 = load i32, i32* %9, align 4
  %40 = load i32*, i32** %10, align 8
  %41 = load i32*, i32** %11, align 8
  %42 = load i32*, i32** %12, align 8
  %43 = load i32*, i32** %13, align 8
  %44 = call i32 %37(%struct.TYPE_7__* %38, i32 %39, i32* %40, i32* %41, i32* %42, i32* %43)
  store i32 %44, i32* %7, align 4
  br label %45

45:                                               ; preds = %32, %30
  %46 = load i32, i32* %7, align 4
  ret i32 %46
}

declare dso_local i32 @TRACE(i8*, %struct.TYPE_8__*, i32, i32*, i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
